asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__gitui__tests__log__limit_prompt.snap
---
source: src/gitui/tests/log.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 3 commit.                             |
                                                                                |
 Recent commits                                                                 |
 8bb5532 main add first commit                                                  |
 6c08cf7 add second commit                                                      |
 79e63f1 add third commit                                                       |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Limit number of commits (default 256): ›                                      |
────────────────────────────────────────────────────────────────────────────────|
Log                     Arguments                                               |
l current               -F Search messages (--grep)                             |
o other                 -n Limit number of commits (-n)                         |
q/<esc> Quit/Close                                                              |
styles_hash: 40d2a2b4b548faf4
