asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__gitui__tests__log__log_other_prompt.snap
---
source: src/gitui/tests/log.rs
expression: ctx.redact_buffer()
---
 8bb5532 main add first commit                                                  |
▌6c08cf7 add second commit                                                      |
 79e63f1 add third commit                                                       |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Log rev (default 6c08cf78a4544ae4dda8e6161a61070867c60246): ›                 |
styles_hash: b9fd13286ebd29fe
